Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89126

REG: ScrollView doesn't remove ScrollBar after settinging the new one

XMLWordPrintable

    • Linux/X11, Windows
    • 908aa77d16e00f2bccc0ddae0f8b61955c56a6a1 (qt/qtquickcontrols2/dev) ac41c629fa1be166127d4bce85f6214b9ce987bd (qt/tqtc-qtquickcontrols2/5.15) 058a3accfb2a314ca628075b4c376e321d89f3ce (qt/qtquickcontrols2/6.1)

      After setting a custom scrollbar in ScrollView, the original scrollbar remains visible

       

      import QtQuick 2.15
      import QtQuick.Controls 2.15
      
      Item {
          id: root
      
          ScrollView {
              anchors.fill: parent
      
              ScrollBar.vertical: ScrollBar {
                  height: parent.height
                  policy: ScrollBar.AlwaysOn
              }
          }
      }
      
      

       

        For Gerrit Dashboard: QTBUG-89126
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            ghorev Grigoriy Khorev
            Votes:
            6 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes