Hide old scroll bars

Reuse the hideOldItem added in 80f1186338bcf8c7d692b4fadfc46531c002c6b0
to unparent and hide them.

Fixes: QTBUG-89126
Pick-to: 6.1 5.15
Change-Id: I641e46571b8ac42e0e5080b6737f305ff59afd51
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>